--- a/src/main/res/layout/fragment_executive.xml
+++ b/src/main/res/layout/fragment_executive.xml
@@ -50,10 +50,26 @@
             android:layout_marginEnd="8dp"
             android:autoLink="phone"
             android:clickable="true"
-            android:textColorLink="@color/purple_500"
             android:text="@string/call_label"
             android:textAlignment="center"
             android:textColor="@color/black"
+            android:textColorLink="@color/purple_500"
+            android:textSize="22sp" />
+
+        <TextView
+            android:id="@+id/text_subtitle2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_subtitle"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:autoLink="phone"
+            android:clickable="true"
+            android:text="@string/call_label2"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textColorLink="@color/purple_500"
             android:textSize="22sp" />
 
     </RelativeLayout>
